# serial

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/serial/: serial.h
src/: serial.cc
src/impl/: unix.cc
src/impl/list_ports/: list_ports_linux.cc
